--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,12 @@ serde = { version = "1.0", features= ["derive"] }
 serde_json = "1.0"
 thiserror="1.0"
 chrono="0.4"
+
+[profile.dev]
+debug = 0
+
+[profile.test]
+debug = 0
+
+[profile.release]
+panic = 'abort'
